fixed the images not showing up on the events category page. Only events created this patch and forward will show images.

--- a/styles/style.css
+++ b/styles/style.css
@@ -104,9 +104,16 @@ html {
     word-wrap: break-word; /* Allow long words to break and wrap */
 }
 
+/* this is the css for the fixed footer */
 footer {
   position: fixed;
   height: 100px;
   bottom: 0;
   width: 100%;
+}
+
+/* Change this bottom margin if the size of it changes (Just do your best to estimate it) */
+/* This is so that content doesn't get covered by the fixed footer */
+body {
+  margin-bottom: 110px;
 }
